<resources>
    <string name="app_name">Edu Class</string>
    <string name="content_description_app_logo">App logo</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_verify_email">Verify email</string>
    <string name="text_forgot_password_prompt">Forgotten password?</string>
    <string name="text_sign_up_prompt">Don\'t have an account? <u>Sign Up</u></string>
    <string name="text_sign_in_prompt">Already have an account? <u>Sign In</u></string>
    <string name="text_google_sign_in">Sign In with Google</string>
    <string name="text_facebook_sign_in">Sign In with Facebook</string>
    <string name="text_github_sign_in">Sign In with GitHub</string>
    <string name="text_classes">Classes</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_enrolled">ENROLLED</string>
    <string name="text_archived_classes">Archived Classes</string>
    <string name="text_class_room_folder">Classroom Folder</string>
    <string name="text_settings">Settings</string>
    <string name="text_navigation_drawer_open">Open navigation drawer</string>
    <string name="text_navigation_drawer_close">Close navigation drawer</string>
    <string name="text_accounts">Accounts</string>
    <string name="text_logout">Logout</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_sign_up">SignUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_create_a_class">Tạo lớp học</string>
    <string name="text_join_class">Tham gia lớp học</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="text_resend_verification_code">Resend code</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
</resources>
